new route working

--- a/views/new.ejs
+++ b/views/new.ejs
@@ -7,6 +7,18 @@
     <title>New Product</title>
 </head>
 <body>
-    
+    <form action="/store/" method="POST">
+        Image:
+        <input type="text" name="img" Placeholder="URL" /><br />
+        Name:
+        <input type="text" name="name" Placeholder="Name" /><br />
+        Description:
+        <input type="text" name="description" placeholder="Description" /><br />
+        Price:
+        <input type="text" name="price" placeholder="Price" /><br />
+        Quantity:
+        <input type="text" name="qty" placeholder="Quantity" /><br />
+        <input type="submit" name="" value="Add New Product" />
+    </form>
 </body>
 </html>
