--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,15 +5,21 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Store Index</title>
-	</head>
-	<h1>Store</h1>
-	<body>
+		<h1>Store</h1>
 		<a href="/store/new/">New Product</a>
+	</head>
+	<body>
 		<ul>
 			<% products.forEach(product => { %>
-			<li><%=product.name%></li>
-				<a href="/store/<%=product.id%>"><img src="<%=product.img%>"/></a>
-			<% }) %>
-		</ul>
+				<li>
+				<%=product.name%>
+				<a href="/store/<%=product._id%>"><img src="<%=product.img%>"/></a>
+				<!-- Delete Button (Not functional yet) -->
+				<!-- <form action="/store/<%=product._id %>?_method=DELETE" method="POST">
+                    <input type="submit" value="DELETE" />
+					</form> -->
+				</li>
+		<% }) %>
+			</ul>
 	</body>
 </html>
