--- a/views/show.ejs
+++ b/views/show.ejs
@@ -6,14 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product Page</title>
 </head>
+<nav>
 <a href="/store/">Back to Home Page</a>
+</nav>
 <h1><%=product.name%></h1>
 <body>
-    <img src="<%=product.img %>"/>
+    <img src="<%=product.img%>"/>
 </br>
     <%=product.description%>
 </br>
-    Price: <%=product.price%>
+    Price: <%=product.price%>$
 </br>
     <%=product.qty%> remaining
 
