WIP: continue tomorrow

--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -7,7 +7,7 @@
     <title>Edit Product</title>
 </head>
 <body>
-    <form action="/store/<%=Product._id%>?_method=PUT" method="POST">
+    <form action="/store/<%=product._id%>?_method=PUT" method="POST">
         Image:
         <input type="text" name="img" /><br />
         Name:
