--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -7,31 +7,35 @@
     <title>Edit Product</title>
 </head>
 <body>
-    <form action="/store/<%=product._id%>?_method=PUT" method="POST">
+    <form action="/store/<%=products._id%>?_method=PUT" method="POST">
         Image:
         <input type="text" name="img" /><br />
         Name:
         <input
             type="text"
             name="name"
+            value="<%=products.name%>"
             Placeholder="Name"
         /><br />
         Description:
         <input
             type="text"
             name="description"
+            value="<%=products.description%>"
             placeholder="Description"
         /><br />
         Price:
         <input
             type="text"
             name="price"
+            value="<%=products.price%>"
             placeholder="Price"
         /><br />
         Quantity:
         <input
             type="text"
             name="qty"
+            value="<%=products.qty%>"
             placeholder="Quantity"
             />
         <input type="submit" name="" value="Edit Product" />
